# deobfuscate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: deobfuscate_bench.rs
examples/: audit.rs  audit_sign_verify.rs  basic.rs  config.toml  corpus_eval.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze.rs  config_toml.rs
src/: audit.rs  config.rs  lib.rs  normalizer.rs  passes.rs  tables.rs  tests.rs  types.rs  wasm.rs
tests/: corpus_eval.rs  integration.rs
tests/corpus/: adversarial.jsonl  benign.jsonl
wasm/: README.md  example.html
