[package]
name        = "deobfuscate"
version     = "1.4.0"
edition     = "2021"
description = "Multi-pass text deobfuscation and encoding-evasion detector for LLM security pipelines."
license     = "MIT"
repository  = "https://github.com/bigblue-r4/deobfuscate-rs"
keywords    = ["security", "unicode", "homoglyph", "obfuscation", "llm"]
categories  = ["text-processing", "encoding"]
readme      = "README.md"

[dependencies]
base64                  = "0.22"
unicode-normalization   = "0.1"

[dev-dependencies]
serde_json = "1"
