[package]
name        = "deobfuscate"
version     = "1.6.0"
edition     = "2021"
description = "Multi-pass text deobfuscation and encoding-evasion detector for LLM security pipelines."
license     = "MIT"
repository  = "https://github.com/bigblue-r4/deobfuscate-rs"
keywords    = ["security", "unicode", "homoglyph", "obfuscation", "llm"]
categories  = ["text-processing", "encoding"]
readme      = "README.md"

[features]
default = ["serde"]
serde   = ["dep:serde", "dep:toml"]

[dependencies]
base64                = "0.22"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
toml  = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1"
