[package]
name        = "deobfuscate"
version     = "1.9.0"
edition     = "2021"
description = "Multi-pass text deobfuscation and encoding-evasion detector for LLM security pipelines."
license     = "MIT"
repository  = "https://github.com/bigblue-r4/deobfuscate-rs"
keywords    = ["security", "unicode", "homoglyph", "obfuscation", "llm"]
categories  = ["text-processing", "encoding"]
readme      = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde", "audit"]
serde   = ["dep:serde", "dep:toml"]
audit   = ["serde", "dep:sha2", "dep:serde_json"]
wasm    = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
base64                = "0.22"
unicode-normalization = "0.1"
serde        = { version = "1", features = ["derive"], optional = true }
toml         = { version = "0.8", optional = true }
sha2         = { version = "0.10", optional = true }
serde_json   = { version = "1",    optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1"
